--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://robgan.github.io/cryptograms",
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
@@ -21,5 +22,9 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
+  }
 }
